config/dev/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/post"
            backend:
              service:
                name: community-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/share"
            backend:
              service:
                name: community-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/reply"
            backend:
              service:
                name: community-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/follow"
            backend:
              service:
                name: community-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/report"
            backend:
              service:
                name: community-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/likes"
            backend:
              service:
                name: community-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/posts"
            backend:
              service:
                name: community-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/follows"
            backend:
              service:
                name: community-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/followers"
            backend:
              service:
                name: community-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/follow-posts"
            backend:
              service:
                name: community-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/new-posts"
            backend:
              service:
                name: community-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/suggested-follows"
            backend:
              service:
                name: community-service
                port:
                  number: 8081
          - pathType: Prefix
            path: "/session"
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - pathType: Prefix
            path: "/ban"
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - pathType: Prefix
            path: "/user"
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - pathType: Prefix
            path: "/users"
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - pathType: Prefix
            path: "/otp"
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - pathType: Prefix
            path: "/forgot-password"
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - pathType: Prefix
            path: "/invite"
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - pathType: Prefix
            path: "/image"
            backend:
              service:
                name: image-service
                port:
                  number: 8082
          - pathType: Prefix
            path: "/album"
            backend:
              service:
                name: image-service
                port:
                  number: 8082
          - pathType: Prefix
            path: "/albums"
            backend:
              service:
                name: image-service
                port:
                  number: 8082
          - pathType: Prefix
            path: "/notification"
            backend:
              service:
                name: notification-service
                port:
                  number: 8083
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ui
                port:
                  number: 3000
